<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="dummy_title_movie">Avengers: Infinity War</string>
    <string name="dummy_release_date">April 27, 2018</string>
    <string name="dummy_overview_movie">As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy…</string>
    <string name="alert_failed_get_data">Failed to get data.</string>
    <string name="label_overview">Overview</string>
    <string name="label_crew">Crew</string>
    <string name="dummy_crew_name">Aceng Pilek</string>
    <string name="dummy_crew_role">Director</string>
    <string name="title_detail_movie">Detail Movie</string>
    <string name="label_user_score">User\nScore</string>
    <string name="dummy_user_score" translatable="false">%1$s \%%</string>
    <string name="action_setting">Setting</string>
    <string name="title_movie">Movie</string>
    <string name="title_tvshow">TV Show</string>
    <string name="title_fav_movie">Favorite Movie</string>
    <string name="title_fav_tvshow">Favorite TV Show</string>
    <string name="caption_crew_name" translatable="false">- %1$s</string>
    <string name="alert_no_internet">No internet connection</string>
    <string name="logo_splash_description" translatable="false">logo_splash</string>
    <string name="title_favorite">Favorite</string>
    <string name="info_add_favorite">Added to favorites</string>
    <string name="info_remove_favorite">Removed from favorites</string>
    <string name="action_favorite">Add to favorite</string>
    <string name="alert_empty_data">Data not found</string>
</resources>
