<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/bg_card"
    android:padding="@dimen/margin_medium"
    android:layout_height="wrap_content">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/imgThumbnail"
        android:layout_margin="@dimen/margin_small"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="@dimen/thumbnail_small_height"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_height="@dimen/thumbnail_small_width"
        app:riv_corner_radius="@dimen/default_corner_radius"
        android:scaleType="centerCrop"
        app:riv_mutate_background="true"
        android:background="@drawable/bg_placeholder" />

    <TextView
        android:id="@+id/tvTitleMovie"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_medium"
        android:fontFamily="@font/montserrat_semibold"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/text_size_big"
        android:maxLines="1"
        android:ellipsize="end"
        tools:text="@string/dummy_title_movie"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imgThumbnail"
        android:layout_width="@dimen/zero_measure"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvReleaseDate"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_medium"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@color/colorPrimaryText"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_normal"
        tools:text="@string/dummy_release_date"
        app:layout_constraintTop_toBottomOf="@id/tvTitleMovie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imgThumbnail"
        android:layout_width="@dimen/zero_measure" />

    <TextView
        android:id="@+id/tvOverview"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_medium"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/colorPrimaryText"
        android:layout_marginTop="@dimen/margin_medium"
        android:textSize="@dimen/text_size_normal"
        tools:text="@string/dummy_overview_movie"
        android:maxLines="2"
        android:ellipsize="end"
        app:layout_constraintTop_toBottomOf="@id/tvReleaseDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/imgThumbnail"
        android:layout_width="@dimen/zero_measure"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/margin_small" />

</androidx.constraintlayout.widget.ConstraintLayout>